<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.changeworld.tim.colorcircleclock.UI.SetFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/setting"
            android:textSize="@dimen/bigger_text_size"
            android:textColor="@color/black"
            android:layout_margin="13dp"/>

        <CheckBox
            android:id="@+id/showClock"
            style="@style/set_title_text"
            android:text="@string/showClock"/>

        <CheckBox
            android:id="@+id/show2ndLayer"
            style="@style/set_title_text"
            android:text="@string/display_2nd_layer"/>

        <LinearLayout
            android:id="@+id/secondLayerArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/splitCountText"
                style="@style/set_title_text"
                android:text="@string/secondLayerSplitCount" />

            <SeekBar
                android:id="@+id/splitCountSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"/>

        </LinearLayout>

        <TextView
            style="@style/set_title_text"
            android:text="@string/main_theme_color"/>

        <Spinner
            android:id="@+id/select_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/back"
            style="@style/set_title_text"
            android:text="@string/back"
            android:background="@color/orange"/>

    </LinearLayout>

</ScrollView>
